# tottle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug.md  feature-request.md  feature_request.md
examples/: simple_api.py  simple_bot.py
examples/api/: simple.py
examples/high-level/: middleware.py  return_manager.py  simple.py  state_dispenser.py
examples/high-level-bot/: keyboard.py  middleware.py  multibot.py  simple.py
examples/high-level/blueprint/: main.py
examples/high-level/exception_factory/: error_handler.py  swear_handler.py
examples/hl-bot/: keyboard.py  simple.py
examples/low-level/: polling_example.py
examples/low-level-bot/: simple.py
tottle/: __init__.py  const.py
tottle/api/: abc.py  api.py
tottle/dispatch/: __init__.py
tottle/dispatch/dispenser/: __init__.py  abc.py  default.py
tottle/dispatch/handlers/: __init__.py  abc.py  function.py
tottle/dispatch/labelers/: __init__.py  abc.py  bot.py
tottle/dispatch/middlewares/: abc.py
tottle/dispatch/return_manager/: __init__.py  abc.py
tottle/dispatch/routers/: abc.py  bot.py
tottle/dispatch/rules/: __init__.py  abc.py  bot.py  message.py
tottle/dispatch/views/: __init__.py  abc.py  message.py  raw.py
tottle/exception_factory/: __init__.py  abc.py  code_error.py  single_error.py
tottle/framework/: __init__.py  abc.py  abc_blueprint.py
tottle/http/: __init__.py
tottle/polling/: abc.py  bot.py  bot_polling.py  polling.py
tottle/tools/: __init__.py  enums.py  exceptions.py
tottle/types/: __init__.py  categories.py  state.py
tottle/utils/: constructor.py  enums.py  logger.py  taskmanager.py  updater.py
(+99 files in other folders)
