[tool.poetry]
name = "tottle"
version = "0.3"
description = "Tottle — fast, flexible and flawless Telegram API wrapper"
authors = ["exthrempty"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tottle-project/tottle-python"
repository = "https://github.com/tottle-project/tottle-python"
keywords = [
    "telegram",
    "telegram-api",
    "tottle",
    "user-longpoll",
    "async",
    "asyncio",
    "bot",
    "longpoll-api",
    "callback",
    "middleware",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^3.7.4"
pydantic = "^1.8.1"
aiohttp = "^3.7.4"
loguru = "^0.5.3"
vbml = "^1.1"
watchdog = "^2.0.2"

[tool.poetry.dev-dependencies]
lxml = "^4.5.0"
mypy = "^0.770"
isort = "^5.7"
flake8 = "^3.7.9"
mypy_extensions = "^0.4.3"
black = { version = "^19.0", allow-prereleases = true }

pre-commit = "^2.12.0"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
exclude = '''
(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
  | venv
  | docs
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
